--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ace-builds": "^1.4.12",
+    "emoji-dictionary": "^1.0.11",
+    "katex": "^0.12.0",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
+    "react-katex": "^2.0.2",
+    "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "remark-math": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
